미션 진행을 위해 모범답안으로 코드 교체